--- a/index.css
+++ b/index.css
@@ -17,12 +17,32 @@ i{
     cursor: pointer;
 }
 
+.fa-comment-dots:hover {
+    color:#1DA1F2;
+}
+
+.fa-heart:hover {
+    color: rgb(255, 125, 125);
+}
+
+.fa-heart:active {
+    color: red;
+}
+
 .fa-solid {
     color: #999;
 }
 
 .liked{
     color: red;
+}
+
+.fa-retweet:hover {
+    color: rgb(125, 255, 125);
+}
+
+.fa-retweet:active {
+    color: limegreen;
 }
 
 .retweeted {
@@ -103,6 +123,29 @@ button{
     padding: 20px 0 0 0px;
     margin: 10px 0 10px 40px;
     width: 80%;
+}
+
+.comment{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    text-align: center;
+}
+
+.comment-input{
+    border: 1px solid #999;
+    border-radius: 5px;
+    height: 40px;
+    width: 100%;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+
+.comment-btn {
+    font-size: 16px;
+    width: 60%;
 }
 
 .handle{
