--- a/index.css
+++ b/index.css
@@ -140,7 +140,7 @@ button{
     width: 100%;
     font-size: 16px;
     line-height: 20px;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 
 .comment-btn {
